--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Эконометрика</title>
+    <link rel="shortcut icon" href="https://png.icons8.com/color/16/ffffff/1.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
+            <div class="row justify-content-md-center">
+    <div class="col-md-10 myContainer">
         <h1 id="main-header"><span>07.09.2018</span> Лекция 1</h1>
         <h2>Вопрос 1. Понятие эконометрической модели</h2>
         <p>
@@ -28,7 +32,7 @@
             <li><p>Имитация различных возможных сценариев социально-экономического развития анализируемой системы.</p></li>
         </ul>
         <h2>Вопрос 2. Типы данных</h2>
-        <h3>При моделировании различных экономических процессов возможны следующие типы данных:</h3>
+        <h4>При моделировании различных экономических процессов возможны следующие типы данных:</h4>
         <ol>
             <li>
                 <p><strong>Пространственные данные.</strong> Это совокупность значений анализируемой экономической перменной, полученной для некоторой группы объектов исследования в фиксированный момент времени. Пример: показатели финаноовой деятельности предприятия за определенный период времени, перепись населения.
@@ -73,7 +77,7 @@
             </li>
         </ul>
         <h2>Вопрос 4</h2>
-        <h3>Последовательность разработки эконометрической модели:</h3>
+        <h4>Последовательность разработки эконометрической модели:</h4>
         <p>
             <strong>Этап 1.</strong>
             Экономическое обоснование модели.
@@ -110,6 +114,19 @@
             </ul>
         </p>
         <p>Процесс построения эконометричской модели является итерационным, допусающим возврат на более ранние этапы с целью учета новой информации и корректировки модели. Для решения задач третьего этапа часто требуется  специальное ПО (Econometric Views, Statistica).</p>
+        <div class="button-bar">
+            <button type="button" class="btn btn-secondary">Наверх</button>
+            <button type="button" class="btn btn-primary">Лекция 2    <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
+        </div>
+        </div>
     </div>
+    <div class="row justify-content-md-center" hidden>
+        <footer class="col-md-10">
+
+        </footer>
+    </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
