Adding folder assets + including normilize.css from cdn

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!-- Title -->
         <title>Эконометрика</title>
-        <link rel="shortcut icon" href="https://png.icons8.com/color/16/ffffff/1.png" type="image/x-icon">
+        <!-- Icon. You can open link https://png.icons8.com/color/16/ffffff/5.png and just change number "5"-->
+        <link rel="shortcut icon" href="src/assets/1.png" type="image/x-icon">
+        <!-- Normalize.css from cdn -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
+        <!-- Bootstrap 4.0 from official cdn -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous">
+        <!-- Own stylesheet -->
         <link rel="stylesheet" href="src/style/main.css">
     </head>
     <body>
