Adding Roboto font

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Title -->
-        <title>Эконометрика</title>
+        <title>Эконометрика. Лекция 1</title>
         <!-- Icon. You can open link https://png.icons8.com/color/16/ffffff/5.png and just change number "5"-->
         <link rel="shortcut icon" href="src/assets/1.png" type="image/x-icon">
         <!-- Normalize.css from cdn -->
@@ -13,14 +14,17 @@
         <!-- Bootstrap 4.0 from official cdn -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous">
+        <!-- Font Roboto from fonts.google.com -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
         <!-- Own stylesheet -->
         <link rel="stylesheet" href="src/style/main.css">
     </head>
+
     <body>
         <div class="container-fluid">
             <div class="row justify-content-md-center">
                 <div class="col-md-10 myContainer">
-                    <h1 id="main-header"><span>07.09.2018</span> Лекция 1</h1>
+                    <h4 id="main-header"><span>07.09.2018</span> Лекция 1</h4>
                     <h2>Вопрос 1. Понятие эконометрической модели</h2>
                     <p>
                         <strong>Эконометрика</strong> - это самостоятельная научная дисциплина, объединяющая
@@ -174,7 +178,8 @@
                     </p>
                     <p>Процесс построения эконометричской модели является итерационным, допусающим возврат на более
                         ранние этапы с целью учета новой информации и корректировки модели. Для решения задач третьего
-                        этапа часто требуется специальное ПО (Econometric Views, Statistica).</p>
+                        этапа часто требуется специальное ПО (Econometric Views, Statistica).
+                    </p>
                     <div class="button-bar">
                         <button type="button" class="btn btn-secondary" id="button_previos">Наверх</button>
                         <button type="button" class="btn btn-primary" id="button_next">Лекция 2 <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
@@ -182,10 +187,14 @@
                 </div>
             </div>
             <!-- jQuerry and nessesary scripts for Bootstrap -->
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+                crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                crossorigin="anonymous"></script>
             <!-- Own Script -->
             <script src="src/script/main.js"></script>
     </body>
+
 </html>
