Fixing position of buttons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="row justify-content-md-center">
                 <div class="col-md-10 myContainer">
                     <h4 id="main-header"><span>07.09.2018</span> Лекция 1</h4>
+                    <hr>
                     <h2>Вопрос 1. Понятие эконометрической модели</h2>
                     <p>
                         <strong>Эконометрика</strong> - это самостоятельная научная дисциплина, объединяющая
@@ -180,21 +181,25 @@
                         ранние этапы с целью учета новой информации и корректировки модели. Для решения задач третьего
                         этапа часто требуется специальное ПО (Econometric Views, Statistica).
                     </p>
-                    <div class="button-bar">
-                        <button type="button" class="btn btn-secondary" id="button_previos">Наверх</button>
-                        <button type="button" class="btn btn-primary" id="button_next">Лекция 2 <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
+                    <hr>
+                    <div class="d-flex flex-row-reverse">
+                        <div class="p-2"><button type="button" class="btn btn-primary" id="button_next">Лекция 2
+                                <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
+                        </div>
+                        <div class="p-2"><button type="button" class="btn btn-secondary" id="button_previos">Наверх</button></div>
                     </div>
                 </div>
             </div>
-            <!-- jQuerry and nessesary scripts for Bootstrap -->
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-                crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-                crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-                crossorigin="anonymous"></script>
-            <!-- Own Script -->
-            <script src="src/script/main.js"></script>
+        </div>
+        <!-- jQuerry and nessesary scripts for Bootstrap -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <!-- Own Script -->
+        <script src="src/script/main.js"></script>
     </body>
 
 </html>
