--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <div class="row justify-content-md-center">
                 <div class="col-md-10 myContainer">
-                    <h4 id="main-header"><span>07.09.2018</span> Лекция 1</h4>
+                    <h5 id="main-header"><span>07.09.2018</span> Лекция 1</h5>
                     <hr>
                     <h2>Вопрос 1. Понятие эконометрической модели</h2>
                     <p>
@@ -69,7 +69,7 @@
                         </li>
                     </ul>
                     <h2>Вопрос 2. Типы данных</h2>
-                    <h4>При моделировании различных экономических процессов возможны следующие типы данных:</h4>
+                    <h5> При моделировании различных экономических процессов возможны следующие типы данных:</h5>
                     <ol>
                         <li>
                             <p><strong>Пространственные данные.</strong> Это совокупность значений анализируемой
@@ -94,7 +94,7 @@
                         Эконометрические модели классифицируются о таким признакам как размерность модели, учет фактора
                         времени, вид функциональной зависимости.
                     </p>
-                    <h4>1.Размерность модели.</h4>
+                    <h5>1.Размерность модели.</h5>
                     <p>
                         Определяется числом совместно анализируемых эндогенных переменных, т.е число уравнений,
                         входящих в модели. По этому признаку модели делятся на:
@@ -110,7 +110,7 @@
                             левой части уравнения.
                         </li>
                     </ul>
-                    <h4>2. В звисимости от того, учитывается ли фактор времени, различают:</h4>
+                    <h5>2. В звисимости от того, учитывается ли фактор времени, различают:</h5>
                     <ul>
                         <li>
                             Статические модели, которые включают переменные, относящиеся к одному и тому же моменту
@@ -121,7 +121,7 @@
                             переменных. Позволяют анализировать динамику изменения эндогенных переменных во времени.
                         </li>
                     </ul>
-                    <h4>3. Вид зависимости. Модели разделяются на:</h4>
+                    <h5>3. Вид зависимости. Модели разделяются на:</h5>
                     <ul>
                         <li>Линейные, относительно параметра.</li>
                         <li>Нелинейные, относительно параметра.</li>
@@ -131,7 +131,7 @@
                         </li>
                     </ul>
                     <h2>Вопрос 4</h2>
-                    <h4>Последовательность разработки эконометрической модели:</h4>
+                    <h5>Последовательность разработки эконометрической модели:</h5>
                     <p>
                         <strong>Этап 1.</strong>
                         Экономическое обоснование модели.
@@ -183,7 +183,8 @@
                     </p>
                     <hr>
                     <div class="d-flex flex-row-reverse">
-                        <div class="p-2"><button type="button" class="btn btn-primary" id="button_next">Лекция 2
+                        <div class="p-2">
+                            <button type="button" class="btn btn-primary" id="button_next">Лекция 2
                                 <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
                         </div>
                         <div class="p-2"><button type="button" class="btn btn-secondary" id="button_previos">Наверх</button></div>
@@ -196,7 +197,7 @@
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh5U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
         <!-- Own Script -->
         <script src="src/script/main.js"></script>
