--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="src/style/main.css">
     </head>
 
-    <body>
+    <body class="page1">
         <div class="container-fluid">
             <div class="row justify-content-md-center">
                 <div class="col-md-10 myContainer">
