--- a/index.html
+++ b/index.html
@@ -184,10 +184,12 @@
                     <hr>
                     <div class="d-flex flex-row-reverse">
                         <div class="p-2">
-                            <button type="button" class="btn btn-primary" id="button_next">Лекция 2
+                            <button type="button" class="btn btn-primary" id="button_next" onclick="openPage('src/pages/lection2.html', '_self')">Лекция 2
                                 <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
                         </div>
-                        <div class="p-2"><button type="button" class="btn btn-secondary" id="button_previos">Наверх</button></div>
+                        <!-- On the next pages this div should be exsist -->
+                        <!-- <div class="p-2"><button type="button" class="btn btn-secondary" id="button_previos">Предыдущая</button>
+                        </div> -->
                     </div>
                 </div>
             </div>
