--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                     <hr>
                     <div class="d-flex flex-row-reverse">
                         <div class="p-2">
-                            <button type="button" class="btn btn-primary" id="button_next" onclick="openPage('src/pages/lection2.html', '_self')">Лекция 2
+                            <button type="button" class="btn btn-primary" id="button_next" onclick="openPage('src/pages/lection2.html', '_self')">Лекция
+                                2
                                 <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
                         </div>
                         <!-- On the next pages this div should be exsist -->
