--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>
                         <strong>Эконометрика</strong> - это самостоятельная научная дисциплина, объединяющая
                         совокупность методов анализа связей между различными экономическими показателями (факторами) на
-                        основании реальных статическких даннах, с использованием аппарата теории вероятностей и
+                        основании реальных статическких данных, с использованием аппарата теории вероятностей и
                         математической статическки. При помощи этих методов можно выявлять новые, раннее неизвестные
                         связи, уточнять или отвергать гиппотезы о существовании определенных связей между
                         экономическими показателями. Эконометрика сформировалась в результате синтазиса трёх
