--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <hr>
                     <h2>Вопрос 1. Понятие эконометрической модели</h2>
                     <p>
-                        <strong>Эконометрика</strong> - это самостоятельная научная дисциплина, объединяющая
+                        <strong>Эконометрика</strong> — это самостоятельная научная дисциплина, объединяющая
                         совокупность методов анализа связей между различными экономическими показателями (факторами) на
                         основании реальных статическких данных, с использованием аппарата теории вероятностей и
                         математической статическки. При помощи этих методов можно выявлять новые, раннее неизвестные
@@ -89,7 +89,7 @@
                             </p>
                         </li>
                     </ol>
-                    <h2>Вопрос 3. Классификация эконометрических моделей.</h2>
+                    <h2>Вопрос 3. Классификация эконометрических моделей</h2>
                     <p>
                         Эконометрические модели классифицируются о таким признакам как размерность модели, учет фактора
                         времени, вид функциональной зависимости.
@@ -126,7 +126,7 @@
                         <li>Линейные, относительно параметра.</li>
                         <li>Нелинейные, относительно параметра.</li>
                         <li>
-                            Внутренние линейные - нелинейные по параметрам, которые можно привести к линейным с помощью
+                            Внутренние линейные — это нелинейные по параметрам, которые можно привести к линейным с помощью
                             определенного функционального преобразования.
                         </li>
                     </ul>
