--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     </head>
 
     <body class="page1">
+        <!-- Read this to anderstand https://getbootstrap.com/docs/4.0/layout/grid/ -->
         <div class="container-fluid">
             <div class="row justify-content-md-center">
-                <div class="col-md-10 myContainer">
+                <div class="col-10 myContainer">
                     <h5 id="main-header"><span>07.09.2018</span> Лекция 1</h5>
                     <hr>
                     <h2>Вопрос 1. Понятие эконометрической модели</h2>
@@ -186,7 +187,7 @@
                         <div class="p-2">
                             <button type="button" class="btn btn-primary" id="button_next" onclick="openPage('src/pages/lection2.html', '_self')">Лекция
                                 2
-                                <img src="https://png.icons8.com/windows/20/ffffff/right.png"></button>
+                                <img src="src/assets/right-arrow.svg" class="image-arrow"></button>
                         </div>
                         <!-- On the next pages this div should be exsist -->
                         <!-- <div class="p-2"><button type="button" class="btn btn-secondary" id="button_previos">Предыдущая</button>
