--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                         <li>Линейные, относительно параметра.</li>
                         <li>Нелинейные, относительно параметра.</li>
                         <li>
-                            Внутренние линейные — это нелинейные по параметрам, которые можно привести к линейным с помощью
+                            Внутренние линейные — это нелинейные по параметрам, которые можно привести к линейным с
+                            помощью
                             определенного функционального преобразования.
                         </li>
                     </ul>
